--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mr_time.example.com.myapplication">
 
+    <!--原为android:theme="@style/AppTheme"-->
+    <!--去除ActionBar标题栏-->
+    <!--添加应用图标，app_icon-->
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
@@ -9,16 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".activity.LoginActivity"></activity>
-        <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- 添加实现类 -->
-        <activity android:name=".activity.MainActivity" />
+        </activity>
+        <!--添加实现类-->
+        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.RegisterActivity"></activity>
+        <activity android:name=".activity.SettingActivity"></activity>
+        <activity android:name=".activity.ModifyPswActivity"></activity>
+        <activity android:name=".activity.FindPswActivity"></activity>
+        <activity android:name=".activity.UserInfoActivity"></activity>
+        <activity android:name=".activity.ChangeUserInfoActivity"></activity>
     </application>
-
 </manifest>
